@@ -10,6 +10,11 @@
 	</TR>
 	<TR>
 		<TD WIDTH="100%">
+			{include file="nodesessions.html"}
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH="100%">
 			{include file="nodegroups.html"}
 		</TD>
 	</TR>
