@@ -1,0 +1,42 @@
+<!--// $Id$ //-->
+<TABLE WIDTH="100%" CELLPADDING="3">
+	<TR class="dark hand" onclick="showOrHide('nodesessionpanel');">
+		<TD class="fall">
+			<IMG src="img/calendar.gif" alt="">
+			<B><A name="nodesessions">{t}Node Sessions:{/t}</A></B> {t}(last 10 sessions){/t}
+		</TD>
+	</TR>
+	<TR id="nodesessionpanel" style="display:none;">
+		<TD WIDTH="100%" class="fall">
+			<TABLE cellpadding="5" cellspacing="0" WIDTH="100%">
+				<TR class="dark">
+					<TD class="fleftu bold" style="width: 14%; white-space: nowrap;">{t}IP Address:{/t}</TD>
+					<TD class="fbt" style="width: 14%; white-space: nowrap;">{t}MAC:{/t}</TD>
+					<TD class="fbt bold" style="width: 14%; white-space: nowrap;">{t}Started:{/t}</TD>
+					<TD class="fbt bold" style="width: 14%; white-space: nowrap;">{t}Finished:{/t}</TD>
+					<TD class="fbt bold" style="width: 14%; white-space: nowrap;">{t}Time Duration:{/t}</TD>
+					<TD class="fbt" style="width: 14%; white-space: nowrap;">{t}Downloaded:{/t}</TD>
+					<TD class="frightu" style="width: 16%; white-space: nowrap;">{t}Uploaded:{/t}</TD>
+				</TR>
+				{section loop=$nodesessions name=session}
+				{cycle name=sessionclass values="light,lucid" print=false}
+				<TR class="{cycle name=sessionclass}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')">
+					<TD class="bold" style="width: 14%; white-space: nowrap;">{$nodesessions[session].ipaddr}</TD>
+					<TD style="width: 14%; white-space: nowrap;">{$nodesessions[session].mac}</TD>
+					<TD style="width: 14%; white-space: nowrap;"><span class="bold">{$nodesessions[session].start|date_format:"%Y.%m.%d"}</span> {$nodesessions[session].start|date_format:"%H:%M:%S"}</TD>
+					<TD style="width: 14%; white-space: nowrap;"><span class="bold">{$nodesessions[session].stop|date_format:"%Y.%m.%d"}</span> {$nodesessions[session].stop|date_format:"%H:%M:%S"}</TD>
+					<TD class="bold" style="width: 14%; white-space: nowrap;">{$nodesessions[session].duration}</TD>
+					<TD style="width: 14%; white-space: nowrap;">{$nodesessions[session].download}</TD>
+					<TD style="width: 16%; white-space: nowrap;">{$nodesessions[session].upload}</TD>
+				</TR>
+				{/section}
+			</TABLE>
+		</TD>
+	</TR>
+</TABLE>
+{literal}<SCRIPT type="text/javascript">
+<!--
+	if (getCookie('nodesessionpanel')=='1')
+		document.getElementById('nodesessionpanel').style.display = '';
+//-->
+</SCRIPT>{/literal}
