@@ -155,6 +155,7 @@ version ? (????-??-??):
   - it's possible to add new config sections from ui [chilan]
   - host owner selection for networks [red/chilan]
   - separation of privileges: finance management and cash registry administration [chilan]
+  - show last 10 node sessions in nodeinfo and nodedit [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
